--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -340,7 +340,7 @@ button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+  -webkit-appearance: ;
 }
 
 button::-moz-focus-inner,
