--- a/css/index_css.css
+++ b/css/index_css.css
@@ -19,3 +19,22 @@
 	color: #000000;
 	letter-spacing: 2px;
 }
+
+.button {
+  border-radius: 0;
+	background-color: #0099ff;
+	border: none;
+	color: white;
+	transition-duration: 0.4s;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+
+.button:hover {
+    background-color: #d3d3d3;
+    color: black;
+		text-decoration: none;
+}
