--- a/css/volunteerOpp.css
+++ b/css/volunteerOpp.css
@@ -1,28 +1,55 @@
 body {
+  background-image: url("../images/volunteers.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  
 }
 
-/*
 .header {
   background: rgb(107, 133, 155);
   background: rgba(107, 133, 155, 0.90);
+  margin-bottom: 30px;
+}
+
+.button {
+  border-radius: 5px;
+  background-color: rgb(230, 245, 255);
+  color: rgb(107, 133, 155);
+  padding: 10px 20px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 30px;
+  z-index: 10;
+  position: relative;
+  left: 125px;
+  top: 32px;
+  width: 150px;
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+    background-color: rgb(0, 123, 255);
+    color: white;
+    text-decoration: none;
+    font-weight: 800;
 }
 
 .header h1 {
+  position: relative;
+  bottom: 25px;
   color: rgb(230, 245, 255);
   text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                  0px -5px 35px rgba(255,255,255,0.3);
 }
+
 .header hr {
   height: 4px;
   background-color: rgb(230, 245, 255);
 }
-*/
 
 .container {
-  border: 2px groove rgb(230, 245, 255);
+  border: 5px rgb(230, 245, 255);
   border-radius: 25px;
   background: rgb(230, 245, 255);
   background: rgba(230, 245, 255, 0.95);
@@ -39,17 +66,18 @@ body {
   height: auto;
   margin: 0 auto;
   position: relative;
-  /*
-  color: rgb(107, 133, 155);
-  */
   font-size: 20px;
+  color: rgb(107, 133, 155);
 }
 
-/*
+.errText {
+  color: red;
+  font-size: 15px;
+}
+
 #bg {
   z-index:-1;
 }
-*/
 
 #zip {
   width: 80%;
