--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,50 @@
 @charset "UTF-8";
+
+body {
+	background-image: url("../images/home_image.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .container {
-	background-color: #FFFFFF;
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	border-bottom-width: 0px;
+	/*
+	border: 0;
+	width: 100%;
+	margin-left: 0;
+	margin-right: 0;
 	padding-left: 0px;
 	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 0px;
+	*/
+	position: relative;
+}
+
+.container h4 {
+	position: relative;
+	top: 40px;
+	left: -120px;
+	color: black;
+}
+
+.container a {
+	position: absolute;
 }
 
 .title {
+	display: inline;
+	width: 100%;
 	font-weight: bold;
 	font-style: normal;
 	font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
-	text-align: center;
-	color: #000000;
+	color: #0098ff;
+  text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
+                 0px -5px 35px rgba(255,255,255,0.3);
 	letter-spacing: 2px;
+	font-size: 85px;
+	position: relative;
+	top: 25px;
+	right: 125px;
 }
 
 .button {
@@ -38,3 +65,33 @@
     color: black;
 		text-decoration: none;
 }
+
+.oppContainer {
+	position: relative;
+	top: 100px;
+}
+
+#signUpBtn {
+	background-color: #bd01bd;
+	top: 55px;
+	right: 150px;
+}
+
+#loginBtn {
+	background-color: #2ad200;
+	top: 55px;
+	right: -40px;
+}
+
+#employerBtn {
+	background-color: #00da9e;
+	position: absolute;
+	top: 500px;
+	right: 590px;
+	padding: 50px 80px;
+}
+
+
+
+
+
