job search page

--- a/css/jobSearch.css
+++ b/css/jobSearch.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/volunteers.png");
+  background-image: url("../images/photographer.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 
