--- a/css/index.css
+++ b/css/index.css
@@ -1,60 +1,50 @@
-@charset "UTF-8";
+html { 
+  background: url(../images/home_image.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 body {
-	background-image: url("../images/home_image.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
+	background: transparent;
 }
-
-.container {
-	/*
-	border: 0;
-	width: 100%;
-	margin-left: 0;
-	margin-right: 0;
-	padding-left: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	*/
+.header {
 	position: relative;
+	margin: 1%;
 }
-
-.container h4 {
-	position: relative;
-	top: 40px;
-	color: black;
-}
-
-.container a {
-	position: absolute;
-}
-
-.title {
-	display: inline;
-	width: 100%;
+.header h1 {
+	display: inline-block;
 	font-weight: bold;
 	font-style: normal;
 	font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
-	color: #0098ff;
+	color: #3582b7;
   text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                  0px -5px 35px rgba(255,255,255,0.3);
 	letter-spacing: 2px;
-	position: relative;
-	top: 25px;
 }
 
+.header h4 {
+	color: #f5f5f5;
+	text-shadow: 1px 0px 2px rgba(0, 0, 0, 1);
+}
+.header .col {
+	margin-top: 5%;
+	margin-bottom: 5%;
+	text-align: center;
+}
 .button {
   border-radius: 0;
 	background-color: #0099ff;
 	border: none;
 	color: white;
 	transition-duration: 0.4s;
-	padding: 15px 32px;
+	padding: 20px 12px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
+	width: 150px;
 }
 
 .button:hover {
@@ -65,26 +55,35 @@ body {
 
 .oppContainer {
 	position: relative;
+	margin-top: 10%;
+	text-align: center;
+}
+
+
+.oppContainer a {
+	margin: 1%;
+}
+
+.employerContainer {
+	margin-top: 10%;
 }
 
 #signUpBtn {
 	width: 100px;
 	background-color: #bd01bd;
-	top: 5%;
-	right: 1%;
+	padding: 10px 10px;
 }
 
 #loginBtn {
 	width: 100px;
+	padding: 10px 10px;
 	background-color: #2ad200;
-	bottom: 10%;
-	right: 1%;
 }
 
 #employerBtn {
+	margin: 1%;
 	background-color: #00da9e;
-	position: absolute;
-	padding: 30px 20px;
+	padding: 30px 30px;
 }
 
 
