added submission confirmation pages for vol and job

--- a/css/Submission.css
+++ b/css/Submission.css
@@ -1,13 +1,56 @@
-
-
 .header {
   background: rgb(238, 180, 34);
+  font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
+  color: white;
 }
 
-#vol {
-  background: rgb(72, 118, 255);
+.home {
+  margin-top: 20px;
+  line-height: 70px;
+  padding: 10px 10px;
+  background: rgb(238, 180, 34); /*yellow*/
+  font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
+  color: white;
+  border: none;
+  text-decoration: none;
 }
 
-.header h1 {
-  color: rgb(255, 255, 255);
+/*different color scheme for volunterring contact*/
+#vol, #volHeader {
+  background:  rgb(72, 118, 255);
+}
+#vol:hover{
+  background: black;
+}
+
+.back {
+  margin-top: 20px;
+  line-height: 70px;
+  padding: 10px 10px;
+  background:  gray;
+  font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
+  color: white;
+  border: none;
+  text-decoration: none;}
+
+.listings {
+  margin-top: 20px;
+  line-height: 70px;
+  padding: 10px 10px;
+  background:  gray;
+  font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
+  color: white;
+  border: none;
+  text-decoration: none;}
+
+.home:hover {
+  background: black;
+}
+
+.back:hover{
+  background: black;
+}
+
+.listings:hover{
+  background:black;
 }
