--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,9 @@ body {
 	position: relative;
 	margin: 1%;
 }
+
 .header h1 {
-	display: inline-block;
+	display: table;
 	font-weight: bold;
 	font-style: normal;
 	font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
@@ -27,11 +28,6 @@ body {
 .header h4 {
 	color: #f5f5f5;
 	text-shadow: 1px 0px 2px rgba(0, 0, 0, 1);
-}
-.header .col {
-	margin-top: 5%;
-	margin-bottom: 5%;
-	text-align: center;
 }
 
 .button {
@@ -61,7 +57,7 @@ body {
 }
 
 
-.oppContainer a {
+a {
 	margin: 1%;
 }
 
