--- a/css/signUp.css
+++ b/css/signUp.css
@@ -1,3 +1,13 @@
+.header {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
 .header h1 {
   display: table;
+  margin-bottom: 15%;
+}
+
+.errText {
+  color: red;
+  font-size: 15px;
 }
