--- a/css/index.css
+++ b/css/index.css
@@ -4,15 +4,22 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  min-height: 100%;
 }
 
 body {
 	background: transparent;
+  position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
 }
 
 .header {
 	position: relative;
-	margin: 1%;
+	margin-top: 5%;
+  margin-left: 1%;
 }
 
 .header h1 {
@@ -26,43 +33,50 @@ body {
 	letter-spacing: 2px;
 }
 .header h4 {
+  margin-top: 10%;
 	color: #f5f5f5;
 	text-shadow: 1px 0px 2px rgba(0, 0, 0, 1);
 }
 
+.userContainer {
+  margin-top: 10%;
+  width: 100%;
+  text-align: center;
+}
+
 .button {
-  border-radius: 0;
+  border-radius: 3px;
 	background-color: #0099ff;
 	border: none;
 	color: white;
 	transition-duration: 0.4s;
-	padding: 20px 12px;
+	padding: 15px 10px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 18px;
 	width: 150px;
 }
 
 .button:hover {
-    background-color: #d3d3d3;
-    color: black;
-		text-decoration: none;
+  text-decoration: none;
 }
 
-.oppContainer {
+.searchContainer {
 	position: relative;
 	margin-top: 10%;
-	text-align: center;
+  text-align: center;
 }
 
-
-a {
-	margin: 1%;
+.searchContainer a:hover {
+  background-color: white;
+  color: #0099ff;
 }
 
 .employerContainer {
-	margin-top: 10%;
+	margin-top: 8%;
+  text-align: center;
+  margin-bottom: 5%;
 }
 
 #signUpBtn {
@@ -71,18 +85,28 @@ a {
 	background-color: #bd01bd;
 }
 
+#signUpBtn:hover {
+  background-color: white;
+  color: #bd01bd;
+}
+
 #loginBtn {
 	width: 100px;
 	padding: 10px 10px;
 	background-color: #2ad200;
 }
 
+#loginBtn:hover {
+  background-color: white;
+  color: #2ad200;
+}
+
 #employerBtn {
-	padding: 30px 30px;
+	padding: 25px 25px;
   background-color: #00da9e;
 }
 
-
-
-
-
+#employerBtn:hover {
+  background-color: white;
+  color: #2ad200;
+}
