--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
-html { 
-  background: url(../images/home_image.jpg) no-repeat center center fixed; 
+html {
+  background: url(../images/homepage_v2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -27,14 +27,14 @@ body {
 	font-weight: bold;
 	font-style: normal;
 	font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
-	color: #3582b7;
+	color: #ffffff;
   text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                 0px -5px 35px rgba(255,255,255,0.3);
 	letter-spacing: 2px;
 }
 .header h4 {
   margin-top: 10%;
-	color: #f5f5f5;
+	color: #ffffff;
 	text-shadow: 1px 0px 2px rgba(0, 0, 0, 1);
 }
 
@@ -82,23 +82,23 @@ body {
 #signUpBtn {
 	width: 100px;
   padding: 10px 10px;
-	background-color: #bd01bd;
+	background-color: #0099ff;
 }
 
 #signUpBtn:hover {
   background-color: white;
-  color: #bd01bd;
+  color: #0099ff;
 }
 
 #loginBtn {
 	width: 100px;
 	padding: 10px 10px;
-	background-color: #2ad200;
+	background-color: #0099ff;
 }
 
 #loginBtn:hover {
   background-color: white;
-  color: #2ad200;
+  color: #0099ff;
 }
 
 #employerBtn {
